# facodi.pt

./: .env.example  .env.supabase.template  .gitignore  AGENTS.md  App.tsx  CONTRIBUTING.md  Dockerfile  FACODI_SETUP.ipynb  FRONTEND_CODEBASE_ANALYSIS.md  README.md  RUN_FACODI_SETUP.bat  execute_setup.py  index.css  index.tsx  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup_facodi.bat  skills-lock.json
.github/agents/: facodi-monorepo-organizer.agent.md  odoo-feature-executor.agent.md
.github/inactive/: backend-api-safety.instructions.md  frontend-dev-workflow.instructions.md
.github/instructions/: odoo-elearning-frontend.instructions.md  odoo-elearning.instructions.md  postman-mcp.instructions.md  supabase-migrations.instructions.md
.github/prompts/: codoo-dual-repo-commit.prompt.md  codoo-init.prompt.md  odoo-api-autopilot.prompt.md  odoo-catalog-refactor.prompt.md
.github/workflows/: continuous-integration.yml  frontend-ci.yml  odoo-integration-smoke.yml  security-audit.yml  sync-md-to-supabase.yml  validate-md.yml
backend/: README.md
backend/odoo_api/: __init__.py  config.py  main.py  odoo_client.py  schemas.py
components/: ChannelCurationPage.tsx  Contributors.tsx  CourseCard.tsx  CourseDetail.tsx  Courses.tsx  DevelopmentBadge.tsx  DevelopmentDisclaimer.tsx  Home.tsx  MarkdownView.tsx  PlaylistCard.tsx
components/admin/: AdminContentDetailPage.tsx  AdminContentListPage.tsx  AdminCuratorListPage.tsx  AdminDashboard.tsx
components/auth/: AuthModal.tsx
components/blog/: BlogListPage.tsx
components/curator/: AdminReviewDashboard.tsx  CuratorApplicationPage.tsx  SubmissionListPage.tsx
components/student/: StudentDashboard.tsx  StudentMyCoursesPage.tsx
components/user/: ProfilePage.tsx
components/videos/: VideoDetail.tsx  (+3 more)
docs/: ACCESSIBILITY_IMPROVEMENTS.md  ARQUITETURA_MONOREPO_ODOO.md  DEVELOPER_GUIDE.md  FACODI.md  PHASE_2_SUMMARY.md  PLAN.md
features/: list_courses.py  publish_courses.py  seed_odoo_lesson_videos.py
frontend/: .gitignore  AGENTS.md  App.tsx  CONTRIBUTING.md  README.md  e2e-results.txt  eslint.config.mjs  index.css  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.typecheck.json  types.ts  vite.config.ts  vitest.config.ts
hooks/: useContentProgress.ts  useDevelopmentNotice.ts
public/: manifest.json  robots.txt
scripts/: install-hugo.sh  public_catalog_enrichment.sql  sync-to-supabase.js  validate-frontmatter.js
services/: catalogSource.ts  channelCurationSource.ts  contentSource.ts  contentSubmissionSource.ts  studentSource.ts  supabase.types.ts  videoSource.ts  videoSuggestionSource.ts
supabase/: seed.sql
tests/: conftest.py
workspace/: README.md
(+299 files in other folders)
